// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DOM structure matches snapshot 1`] = `
<div>
  <form
    action=""
    method=""
    role="form"
  />
</div>
`;

exports[`render of Form 1`] = `
<form
  action=""
  method=""
  role="form"
/>
`;
